--- a/m23/data+scripts/m23admin/css/index_fb.css
+++ b/m23/data+scripts/m23admin/css/index_fb.css
@@ -469,7 +469,7 @@ div#eselinhalt {
 }
 
 /*BUTTONS*/
-input[type="submit"] {
+input[type="submit"], .buttondeko {
 	color: 			#3f72ab;
 	font-weight:		bold;
 	-moz-border-radius:	14px;
@@ -487,13 +487,13 @@ input[type="submit"] {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
 }
 
-input[type="submit"]:hover {
+input[type="submit"]:hover, .buttondeko:hover {
 	color: 			#295996;
 	border: 4px double #79abec;
 	text-shadow: 	0px 0px 10px #79abec;
 }
 
-input[type="submit"]:active {
+input[type="submit"]:active, .buttondeko:active {
 	color: 			#295996;
 	text-shadow: none;
 	background: rgb(224,224,224); /* Old browsers */
