--- a/m23/data+scripts/m23admin/css/index_fb.css
+++ b/m23/data+scripts/m23admin/css/index_fb.css
@@ -366,6 +366,16 @@ table tr:last-child td:last-child {
 	line-height:		1.2em;
 }
 
+.oddrow {
+	background-color: #A4D9FF;
+	border-color: #A4D9FF;
+  
+}
+
+.evenrow:hover, .oddrow:hover {
+	background-color: #FFFFFF;
+}
+
 /*pictures*/
 .framed_image {
 		border-style:			solid;
