--- a/m23/data+scripts/m23admin/css/index_fb.css
+++ b/m23/data+scripts/m23admin/css/index_fb.css
@@ -501,6 +501,17 @@ input[type="button"], input[type="submit"], .linkAsButton, .linkAsButton:link {
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
 }
 
+input[type="button"]:disabled, input[type="button"]:disabled:hover,
+input[type="submit"]:disabled, input[type="submit"]:disabled:hover,
+.linkAsButton:disabled, .linkAsButton:disabled:hover,
+.linkAsButton:link:disabled, .linkAsButton:link:disabled:hover {
+    background: rgba(0, 0, 0, 0) linear-gradient(to bottom, #ffffff 0%, #f3f3f3 50%, #ededed 51%, #ffffff 100%) repeat scroll 0px 0px ! important;
+    border-color: #aaaaaa;
+    color: #aaaaaa ! important;
+    cursor: not-allowed;
+    text-shadow: none;
+}
+
 input[type="submit"]:hover, .linkAsButton:hover {
 	color: 			#295996;
 	border: 4px double #79abec;
