--- a/m23/data+scripts/m23admin/css/index_fb.css
+++ b/m23/data+scripts/m23admin/css/index_fb.css
@@ -599,3 +599,17 @@ option {
 	visibility: visible;
 	opacity: 1;
 }
+
+.selectcheckedicons option:checked {
+	background-image:url("/gfx/checked.png");
+	background-repeat:no-repeat;
+	background-position:center left;
+	padding-left:18px;
+}
+
+.selectcheckedicons option {
+	background-image:url("/gfx/unchecked.png");
+	background-repeat:no-repeat;
+	background-position:center left;
+	padding-left:18px;
+}
